--- a/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FCD2A68D-540F-4599-A7B0-5086057419EC}</ProjectGuid>
-    <Ice_BuildingSrc>yes</Ice_BuildingSrc>
+    <IceBuildingSrc>yes</IceBuildingSrc>
     <IceBuilderInstallDir>$([MSBuild]::GetRegistryValue('HKEY_CURRENT_USER\SOFTWARE\ZeroC\IceBuilder', 'InstallDir.$(VisualStudioVersion)'))</IceBuilderInstallDir>
     <IceBuilderCppProps>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.props</IceBuilderCppProps>
     <IceBuilderCppTargets>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.targets</IceBuilderCppTargets>
