--- a/cpp/src/FreezeScript/msbuild/transformdb/transformdb.vcxproj
+++ b/cpp/src/FreezeScript/msbuild/transformdb/transformdb.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7A3141F3-EE35-42F6-B602-42A3378431F1}</ProjectGuid>
-    <Ice_BuildingSrc>yes</Ice_BuildingSrc>
+    <IceBuildingSrc>yes</IceBuildingSrc>
     <IceBuilderInstallDir>$([MSBuild]::GetRegistryValue('HKEY_CURRENT_USER\SOFTWARE\ZeroC\IceBuilder', 'InstallDir.$(VisualStudioVersion)'))</IceBuilderInstallDir>
     <IceBuilderCppProps>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.props</IceBuilderCppProps>
     <IceBuilderCppTargets>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.targets</IceBuilderCppTargets>
