--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -10,11 +10,6 @@
 iceVersion = 3.7.0
 
 //
-// Prefix version
-//
-prefixVersion = 3.7b0
-
-//
 // The directory that contains Oracle Berkeley DB's db.jar file. When not
 // set, Gradle attempts to locate db.jar in a number of pre-set
 // directories based on iceVersion.
@@ -53,7 +48,13 @@ iceHome =
 //
 // Set the version of the Ice Builder to use for building
 //
-iceBuilderVersion = 1.4.0
+iceBuilderVersion = 1.4.1
+
+//
+// Set the builder artifact class path. It must be set to com.zeroc.gradle.ice-builder
+// when using the gradle-ice-builder-plugin package.
+//
+iceBuilderClassPath = gradle.plugin.com.zeroc.gradle.ice-builder
 
 //
 // Set the location of a local Ice Builder for Gradle source directory
