--- a/cpp/src/Freeze/msbuild/freeze/freeze.vcxproj
+++ b/cpp/src/Freeze/msbuild/freeze/freeze.vcxproj
@@ -777,6 +777,7 @@ move $(Platform)\$(Configuration)\CatalogIndexList.h $(FreezeSrcRootDir)\include
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="$(IceBuilderCppTargets)" Condition="Exists('$(IceBuilderCppTargets)')" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\..\ice\cpp\msbuild\ice.sign.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
