Support to build with ICE_HOME/FREEZE_HOME binary distributions

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -23,6 +23,9 @@ subprojects {
                 dirs slice.jarDir
             }
         }
+
+        mavenCentral()
+
         maven {
             url 'https://repo.zeroc.com/nexus/content/repositories/thirdparty'
         }
