--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -46,9 +46,15 @@ debug = true
 iceHome =
 
 //
+// Set freezeHome to location of Freeze installation if Freeze was installed
+// in a non-standard location.
+//
+freezeHome =
+
+//
 // Set the version of the Ice Builder to use for building
 //
-iceBuilderVersion = 1.4.1
+iceBuilderVersion = 1.4.2
 
 //
 // Set the builder artifact class path. It must be set to com.zeroc.gradle.ice-builder
