--- a/java/gradle/db.gradle
+++ b/java/gradle/db.gradle
@@ -2,54 +2,15 @@
 // Find BerkeleyDB JAR
 //
 
-def env = System.getenv()
-def isWindows = System.properties['os.name'].toLowerCase().contains('windows')
-
-// Check if we are building against source distribution
-def iceCppDir = slice.srcDist ? [slice.iceHome, "cpp"].join(File.separator) : slice.iceHome
-
-def localappdata
-def nuget
-def dbVersion
-def dbPackage
-
-if (isWindows) {
-    nuget = "${System.env.LOCALAPPDATA}\\ZeroC\\nuget\\nuget.exe"
-    dbVersion = "5.3.28.1"
-    dbPackage = "$rootProject.projectDir\\..\\cpp\\msbuild\\packages\\berkeley.db.java7"
-
-    task nugetDirectory() {
-        def nugetDir = new File("${System.env.LOCALAPPDATA}\\ZeroC\\nuget")
-        if(!nugetDir.exists()) {
-            nugetDir.mkdirs()
-        }
-    }
-
-    task nugetInstall(type:Exec, dependsOn:nugetDirectory) {
-      commandLine 'cmd', '/c', 'powershell', '-Command', "(New-Object Net.WebClient).DownloadFile('https://nuget.org/nuget.exe', '${nuget}')"
-    }
-
-    task nugetInstallBerkeleyDb(type:Exec) {
-      commandLine 'cmd', '/c', nuget, 'install', 'berkeley.db.java7', '-OutputDirectory', "$rootProject.projectDir/../cpp/msbuild/packages/", '-ExcludeVersion'
-    }
-
-}
-
 if(dbHome) {
     ext.dbJar = "${dbHome}/db.jar"
-} else if(env['DB_HOME']) {
-    def dbHomeDir = env['DB_HOME']
-    ext.dbJar = "${dbHomeDir}/lib/db.jar"
+} else if(System.env.DB_HOME) {
+    ext.dbJar = "${System.env.DB_HOME}/lib/db.jar"
 } else {
     def subdirs
     if (isWindows) {
-        if(!new File(nuget).exists()) {
-            nugetInstall.execute()
-        }
-        if(!new File("${dbPackage}/berkeley.db.java7.nupkg").exists()) {
-            nugetInstallBerkeleyDb.execute()
-        }
-        subdirs = [ "${dbPackage}/build/native/lib/" ]
+        rootProject.nugetRestore.execute()
+        subdirs = [ "${rootProject.projectDir}/packages/berkeley.db.java7.5.3.28.1/build/native/lib/" ]
     } else {
         subdirs = [
             "/usr/local/opt/ice/libexec/lib/",
