--- a/demos/java-compat/Manual/evictorFilesystem/build.gradle
+++ b/demos/java-compat/Manual/evictorFilesystem/build.gradle
@@ -21,12 +21,10 @@ sourceSets {
 }
 
 dependencies {
-    compile localDependency("ice-compat")
-    compile localDependency("freeze")
+    compile "com.zeroc:ice-compat:${iceVersion}"
+    compile "com.zeroc:freeze:${iceVersion}"
     runtime files(dbJar)
-    if (!useLocalOnly) {
-        runtime "org.apache.tools:bzip2:1.0"
-    }
+    runtime "org.apache.commons:commons-compress:1.14"
 }
 
 // Don't create the default jar.
