--- a/demos/java-compat/Freeze/casino/build.gradle
+++ b/demos/java-compat/Freeze/casino/build.gradle
@@ -21,11 +21,10 @@ sourceSets {
 }
 
 dependencies {
-    compile localDependency("ice-compat")
-    compile localDependency("freeze")
-    if (!useLocalOnly) {
-        runtime "org.apache.tools:bzip2:1.0"
-    }
+    compile "com.zeroc:ice-compat:${iceVersion}"
+    compile "com.zeroc:freeze:${iceVersion}"
+    compile files(dbJar)
+    runtime "org.apache.commons:commons-compress:1.14"
 }
 
 dependencies {
